objects/Repossession__c.object
<CustomObject>
    <description>Extension of Case object to initially support Rights Letters, but can be extended to other repossession-related processes.</description>
    <fields>
        <fullName>Account_Number_Long__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to convert short format retail account numbers into long form account numbers with bank and sequence numbering required by DMS.</description>
        <formula>IF(Account_Type__c = &quot;Lease&quot;, Financial_Account__r.Financial_Account_Number__c, &quot;704&quot; &amp; Financial_Account__r.Financial_Account_Number__c &amp; &quot;0001&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number Long</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Terminated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Checkbox for user to indicate whether account has been terminated in Host.</description>
        <label>Account Terminated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Account_Termination_Code__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Guides the user to enter the correct code into Host when terminating the account. Set by the RL Set State Conditions Flow when associating or re-associating with a financial account. Not maintained by the user.</description>
        <label>Account Termination Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Formula field to directly expose the type of financial account and feed into Document Request.</description>
        <formula>Financial_Account__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_City__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction city at which repossession is scheduled to be sold.</description>
        <label>Auction Agency City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_ID__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction ID at which repossession is scheduled to be sold. Not exposed to user nor used in Document Request. Perhaps available as reference with United Road when issues arise or corrections required.</description>
        <label>Auction Agency ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_Name__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction name at which repossession is scheduled to be sold.</description>
        <label>Auction Agency Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_Phone__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction phone at which repossession is scheduled to be sold.</description>
        <label>Auction Agency Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_State__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction state at which repossession is scheduled to be sold.</description>
        <label>Auction Agency State</label>
        <picklist>
            <picklistValues>
                <fullName>AA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_Street1__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction street address line 1 at which repossession is scheduled to be sold.</description>
        <label>Auction Agency Street1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_Street2__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction street address line 2 at which repossession is scheduled to be sold.</description>
        <label>Auction Agency Street2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auction_Agency_Zip__c</fullName>
        <description>SRC: United Road
INT: United Road TIBCO Callout
Trans: N
BU: RL
FD: Auction zip code at which repossession is scheduled to be sold.</description>
        <label>Auction Agency Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BK_Active_or_Discharged__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to indicate whether the financial account is in an active or discharged bankruptcy status. Used by Apex classes (generate doc request and validate repossession) to validate whether all related FACs have been assigned a bankruptcy status.</description>
        <formula>IF(CASE(Financial_Account__r.Bankruptcy_Flag__c,
&quot;A&quot;, 1,
&quot;B&quot;, 1,
&quot;C&quot;, 1,
&quot;D&quot;, 1,
&quot;T&quot;, 1,
&quot;E&quot;, 1,
&quot;F&quot;, 1,
&quot;G&quot;, 1,
&quot;H&quot;, 1,
0
) = 1, True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BK - Active or Discharged</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Insurance_Fee_Refund__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to add CLAH and GAP refunds the user has determined are due to the customer in CA according to the contract.</description>
        <formula>CLAH_Refund__c + GAP_Refund__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Insurance Fee Refund</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Lease_Late_Charges__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to add late and miscellaneous charges reported together in CA. May be reduced by the user-entered excluded fee amount.</description>
        <formula>Financial_Account__r.Charges_Late__c + Financial_Account__r.Charges_Miscellaneous__c - Excluded_Fee_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Lease Late Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Lease_Repo_Costs__c</fullName>
        <description>SRC: Salesforce 
INT: 
Trans: Y 
BU: RL 
FD: Formula field to add repossession costs and impound fee reported together in CA.</description>
        <formula>Repossession_Costs__c + Impound_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Lease Repo Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CA_Vehicle_Storage_Daily_Rate__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to make daily storage fee rates in CA always $10 and feed into Document Request for 4015CA and 6015CA.</description>
        <formula>IF(TEXT(iRepo_RepoState__c) = &quot;CA&quot;, 10, Vehicle_Storage_Daily_Rate__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CA Vehicle Storage Daily Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLAH_Refund__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Amount of credit, life, accident, health insurance refund the customer is entitled to when part of contract and where state of jurisdiction is CA.</description>
        <label>CLAH Refund</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CLAH__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Picklist for user to indicate whether credit, life, accident, health insurance was written as part of the contract and required to be refunded in CA.</description>
        <label>CLAH</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SRC: Salesforce
INT: iRepo M1 Integration
Trans: N
BU: RL
FD: Relationship between Repossession and Case created at creation by iRepo integration or manually creating new rights letter case, which generates the Repossession record at the same time (Visualforce page exposed as tab).</description>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Repossessions</relationshipLabel>
        <relationshipName>Repossessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Conditional_Reinstatement__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Picklist for user to indicate whether reinstatement rights are required to be offered by the contract when the state of jurisdiction does not mandate nor deny it.</description>
        <label>Conditional Reinstatement</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cost_of_Sale__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to add repo costs, transport fees, and impound fee together for reporting on voluntary surrender lease form in CA.</description>
        <formula>Repossession_Costs__c + United_Road_Transport_Fees__c + Impound_Fee__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cost of Sale</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dealer_Guaranty__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Picklist for user to indicate whether a dealer guarantee was written into the contract.</description>
        <label>Dealer Guaranty</label>
        <picklist>
            <picklistValues>
                <fullName>Full</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Phone__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to transform the dealer phone number stored as 10 digits to a formatted phone number suitable for printing on forms.</description>
        <formula>IF(LEN(Financial_Account__r.Dealership__r.Phone) = 10, &quot;(&quot; &amp; LEFT(Financial_Account__r.Dealership__r.Phone, 3) &amp; &quot;) &quot; &amp; MID(Financial_Account__r.Dealership__r.Phone, 4, 3) &amp; &quot;-&quot; &amp; RIGHT(Financial_Account__r.Dealership__r.Phone, 4), Financial_Account__r.Dealership__r.Phone)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dealer Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Extn__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code a dummy extension for transfer to the unprinted form header information. Field can be rewritten to reflect user-based information when it is maintained on the user record.</description>
        <formula>&apos;1234&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Extn</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Hours__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code default departmental hours for transfer to the unprinted form header information. Field can be rewritten to reflect user-based information when it is maintained on the user record or in custom settings.</description>
        <formula>&apos;9AM - 5PM PACIFIC&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Hours</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Name__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code a default department name for transfer to the unprinted form header information. Field can be rewritten to reflect user-based information when it is maintained on the user record.</description>
        <formula>&apos;Collections&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Phone__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code a dummy phone number for transfer to the unprinted form header information. Field can be rewritten to reflect user-based information when it is maintained on the user record.</description>
        <formula>&apos;123-456-1234&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dispatch_Name__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code printing locally instruction for transfer to the unprinted form header information. Field can be rewritten to reflect other options when available, such as print services.</description>
        <formula>&apos;Print Local&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Dispatch Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalLongNameCaps__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the legal long name in all caps on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The formula fields will follow the selections/values assigned in Entity_Logo__c and Entity_ShortName__c.</description>
        <formula>UPPER( Entity_LegalLongName__c )</formula>
        <label>Entity LegalLongNameCaps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalLongName__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the legal long name on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The formula fields will follow the selections/values assigned in Entity_Logo__c and Entity_ShortName__c.</description>
        <formula>CASE( Entity_Logo__c &amp; Entity_ShortName__c, 
&apos;TFS&apos;&amp;&apos;TFS&apos;, &apos;Toyota Motor Credit Corporation&apos;, 
&apos;TFS&apos;&amp;&apos;TMCC&apos;, &apos;Toyota Motor Credit Corporation&apos;, 
&apos;TFS&apos;&amp;&apos;TLT&apos;, &apos;Toyota Motor Credit Corporation&apos;, 
&apos;LFS&apos;&amp;&apos;TMCC&apos;, &apos;Toyota Motor Credit Corporation&apos;, 
&apos;LFS&apos;&amp;&apos;TLT&apos;, &apos;Lexus Financial Services&apos;, 
&apos;LFS&apos;&amp;&apos;LFS&apos;, &apos;Lexus Financial Services&apos;, 
&apos;&apos;)</formula>
        <label>Entity LegalLongName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LegalShortName__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the legal name acronym on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The formula fields will follow the selections/values assigned in Entity_Logo__c and Entity_ShortName__c.</description>
        <formula>CASE( Entity_Logo__c &amp; Entity_ShortName__c, 
&apos;TFS&apos;&amp;&apos;TFS&apos;, &apos;TMCC&apos;, 
&apos;TFS&apos;&amp;&apos;TMCC&apos;, &apos;TMCC&apos;, 
&apos;TFS&apos;&amp;&apos;TLT&apos;, &apos;TMCC&apos;, 
&apos;LFS&apos;&amp;&apos;TMCC&apos;, &apos;TMCC&apos;, 
&apos;LFS&apos;&amp;&apos;TLT&apos;, &apos;LFS&apos;, 
&apos;LFS&apos;&amp;&apos;LFS&apos;, &apos;LFS&apos;, 
&apos;&apos;)</formula>
        <label>Entity LegalShortName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Logo__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly select the printed logo on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TFS. More complex determinations may exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The dependent formula fields will follow the selections/values assigned here and Entity_ShortName__c.</description>
        <formula>IF ( 
BEGINS(Financial_Account__r.Dealer_Code__c, &apos;6&apos;), &apos;LFS&apos;, &apos;TFS&apos; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LongNameCaps__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the long name in all caps on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The formula fields will follow the selections/values assigned in Entity_Logo__c and Entity_ShortName__c.</description>
        <formula>UPPER( Entity_LongName__c )</formula>
        <label>Entity LongNameCaps</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_LongName__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the long name on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The formula fields will follow the selections/values assigned in Entity_Logo__c and Entity_ShortName__c.</description>
        <formula>CASE( Entity_Logo__c &amp; Entity_ShortName__c, 
  &apos;TFS&apos;&amp;&apos;TFS&apos;, &apos;Toyota Financial Services&apos;,
  &apos;TFS&apos;&amp;&apos;TMCC&apos;, &apos;Toyota Motor Credit Corporation&apos;,
  &apos;TFS&apos;&amp;&apos;TLT&apos;, &apos;Toyota Lease Trust&apos;,
  &apos;LFS&apos;&amp;&apos;TMCC&apos;, &apos;Toyota Motor Credit Corporation&apos;,
  &apos;LFS&apos;&amp;&apos;TLT&apos;, &apos;Toyota Lease Trust&apos;,
  &apos;LFS&apos;&amp;&apos;LFS&apos;, &apos;Lexus Financial Services&apos;,
   &apos;&apos;)</formula>
        <label>Entity Long Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_Phone__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code a callback number printed on a form. For the initial release, this is only one number, but for future releases may be extended to include logic to display different phone numbers.</description>
        <formula>&apos;(800) 279-9032&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_ShortName__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to properly represent the long name acronym on a form for the correct TFS entity associated with the financial account. For the initial release, this is based on the dealer code and if it begins with a 6, it is an LFS-based entitiy. Otherwise, it is TMCC. More complex determinations may exist, but were not required for initial go-live. Future enhancements or additional forms projects may implement choices for user input. The dependent formula fields will follow the selections/values assigned here and Entity_Logo__c.</description>
        <formula>IF (
 BEGINS(Financial_Account__r.Dealer_Code__c, &apos;6&apos;), &apos;LFS&apos;, &apos;TMCC&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Entity Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Excluded_Fee_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: An amount entered by the user to exclude certain fees from the gross balance/redemption amount when they have been included in miscellaneous fees.</description>
        <label>Excluded Fee Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Financial_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Financial account for which repo is executed. Value assigned during RL Set State Conditions Flow from the provided iRepo account number when VIN matches and able to be re-assigned by the user.</description>
        <label>Financial Account</label>
        <referenceTo>Financial_Account__c</referenceTo>
        <relationshipLabel>Repossessions</relationshipLabel>
        <relationshipName>Repossessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Form_3280_3281_Note_Dealer_Guaranty__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to provide the user with values to copy and paste into DMS for the 3280/3281 dealer guaranty processing.</description>
        <formula>IF(ISPICKVAL(Dealer_Guaranty__c, &quot;No&quot;) || ISBLANK(TEXT(Dealer_Guaranty__c)),
&quot;No dealer guaranty selected.&quot;,
&quot;Account Number: &quot; &amp; Financial_Account__r.Financial_Account_Number__c &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Repo Date: &quot; &amp; LPAD(TEXT(Month(Local_Repo_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT(Day(Local_Repo_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; TEXT(Year(Local_Repo_Date__c)) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
IF(ISPICKVAL(Dealer_Guaranty__c, &quot;Full&quot;), 
&quot;Use form 3280&quot;,
&quot;Use form 3281&quot;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 3280/3281 Note - Dealer Guaranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_3364_Note_Title_Action_Request__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to provide the user with values to copy and paste into DMS for the 3364 title request processing.</description>
        <formula>IF(ISPICKVAL(Dealer_Guaranty__c, &quot;Full&quot;),
&quot;Full dealer guaranty selected. No title request action to be taken.&quot;,
IF(NOT(ISBLANK(Recorded_Legal_Sale_Date__c)),
&quot;Account Number: &quot; &amp; Financial_Account__r.Financial_Account_Number__c &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;LSD: &quot; &amp; LPAD(TEXT(Month(Recorded_Legal_Sale_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT(Day(Recorded_Legal_Sale_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; TEXT(Year(Recorded_Legal_Sale_Date__c)) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Miles: 0&quot; &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Title to be sent to auction: &quot; &amp; IF(!Salvage__c, &quot;Y&quot;, &quot;N&quot;) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Title to be sent to other: &quot; &amp; IF(Salvage__c, &quot;Y&quot;, &quot;N&quot;) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
Title_Name__c &amp; &quot;, &quot; &amp; Title_Street1__c &amp; &quot;, &quot; &amp; IF(!ISBLANK(Title_Street2__c), Title_Street2__c &amp; &quot;, &quot;, &quot;&quot;) &amp; Title_City__c &amp; &quot;, &quot; &amp; Title_State__c &amp; &quot; &quot; &amp; Title_Zip__c,
&quot;Rights letter not yet generated.&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 3364 Note - Title Action Request</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_4001_Note_Optional_Product_Refund__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to provide the user with values to copy and paste into DMS for the 4001 optional products/insurance/warranty processing.</description>
        <formula>IF(ISPICKVAL(Service_Contracts__c, &quot;No&quot;) || ISBLANK(TEXT(Service_Contracts__c)),
&quot;No service contracts identified requiring refund request.&quot;,
IF(NOT(ISBLANK(Recorded_Legal_Sale_Date__c)),
&quot;Account Number: &quot; &amp; Financial_Account__r.Financial_Account_Number__c &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Reason for termination: the vehicle was repossessed&quot; &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Repo Date: &quot; &amp; LPAD(TEXT(Month(Local_Repo_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT(Day(Local_Repo_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; TEXT(Year(Local_Repo_Date__c)) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;LSD: &quot; &amp; LPAD(TEXT(Month(Recorded_Legal_Sale_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; LPAD(TEXT(Day(Recorded_Legal_Sale_Date__c)), 2, &quot;0&quot;) &amp; &quot;/&quot; &amp; TEXT(Year(Recorded_Legal_Sale_Date__c)) &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;) &amp; 
&quot;Miles: 0&quot; &amp; SUBSTITUTE($Label.LineBreak, &quot;-&quot;, &quot;&quot;),
&quot;Rights letter not yet generated.&quot;
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form 4001 Note - Optional Product Refund</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field to hard-code the required non-printing header value for forms processing in the Adobe Forms system.</description>
        <formula>&apos;Automatic&apos;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Form Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAP_Refund__c</fullName>
        <defaultValue>0</defaultValue>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Amount of GAP refund entered by the user and required by the contract - pro rated to remaining term. Applies to state of jurisdiction in CA for retail loans.</description>
        <label>GAP Refund</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GAP__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: N
BU: RL
FD: Picklist for user to indicate whether a GAP refund entitlement is required by the contract if the state of jurisdiction is CA.</description>
        <label>GAP</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gross_Early_Termination_Amount__c</fullName>
        <description>SRC: Salesforce
INT: 
Trans: Y
BU: RL
FD: Formula field for unique presentation of gross balance for CA-based lease terminations.</description>
        <formula>Financial_Account__r.Contract_Receivable__c + Financial_Account__r.Refund__c + CA_Lease_Late_Charges__c + Financial_Account__r.Payment_Amount_Past_Due__c + Cost_of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Early Termination Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IRepo_AssetRecoveryDate__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: N
BU: RL
FD: Date repossession order requested of iRepo. Not actively used in the RL process but available for reference.</description>
        <label>iRepo Asset Recovery Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IRepo_AssignmentType__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: Y
BU: RL
FD: Identifies whether the repossession was voluntary or not. TIBCO transforms &quot;Voluntary Recovery&quot; into true value in Voluntary_Surrender__c.</description>
        <label>iRepo Assignment Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IRepo_CreateDateTime__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: N
BU: RL
FD: Date assignment was created in the iRepo system. Not actively used in the RL process but available for reference.</description>
        <label>iRepo Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>IRepo_CustomerName__c</fullName>
        <description>SRC: iRepo
INT: iRepo M1 TIBCO Pull
Trans: N
BU: RL
FD: First and last name of the customer in the iRepo system. Not actively used in the RL process but available for reference and helps to align mismatched repossessions with correct accounts.</description>
        <label>iRepo Customer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>